--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,17 @@
 *.tar.gz
 *.rar
 .idea/
+.img/
+.main_package/
+.master_package/
+.not_master_package/
+.out/
+
+
+
+
+
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
