--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,13 @@
 *.rar
 .idea/
 
+HomeWork_5/
+HomeWork_6/
+img/
+main_package/
+master_package/
+not_master_package/
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
