--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,14 @@
 *.tar.gz
 *.rar
 .idea/
+HomeWork_5/
+HomeWork_6/
+HomeWork_7/
+HomeWork_8/
+main_package/
+master_package/
+not_master_package/
+
 
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
