--- a/.gitignore
+++ b/.gitignore
@@ -26,16 +26,8 @@ HomeWork_8/
 main_package/
 master_package/
 not_master_package/
+img/
 
-
-HomeWork_5/
-HomeWork_6/
-HomeWork_7/
-HomeWork_8/
-HomeWork_9/
-main_package/
-master_package/
-not_master_package/
 
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
