--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,11 @@ main_package/
 master_package/
 not_master_package/
 
+HomeWork_6\
+HomeWork_7\
+HomeWork_8\
+img\
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
