--- a/HomeWork_16_TestNG/pom.xml
+++ b/HomeWork_16_TestNG/pom.xml
@@ -3,16 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>HomeWorks</groupId>
+        <artifactId>aqa-pet</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>HomeWorks</groupId>
-    <artifactId>aqa-pet</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>HomeWork_11_Maven</module>
-        <module>HomeWork_17_SeleniumWD_Basic</module>
-        <module>HomeWork_16_TestNG</module>
-    </modules>
+    <artifactId>HomeWork_16_TestNG</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -20,8 +17,4 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-
-    </dependencies>
-    
 </project>
