--- a/HomeWork_16/pom.xml
+++ b/HomeWork_16/pom.xml
@@ -51,6 +51,12 @@
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testNGPositive.xml</suiteXmlFile>
+                        <suiteXmlFile>testNGNegative.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
            </plugin>
         </plugins>
     </build>
