--- a/HomeWork_17_SeleniumWD_Basic/pom.xml
+++ b/HomeWork_17_SeleniumWD_Basic/pom.xml
@@ -19,6 +19,7 @@
         <slf4j.version>1.7.13</slf4j.version>
         <testng.version>7.9.0</testng.version>
         <selenium.version>4.18.1</selenium.version>
+        <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
     </properties>
 
     <dependencies>
@@ -58,5 +59,23 @@
             <version>${selenium.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.plugin.version}</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testNGPositive.xml</suiteXmlFile>
+                        <suiteXmlFile>testNGNegative.xml</suiteXmlFile>
+                        <!--Я помню, что мы на практике не будем запускать отсюда сразу два сьюта.
+                        Один можно закоммитить.-->
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
