--- a/HomeWork_17_SeleniumWD_Basic/pom.xml
+++ b/HomeWork_17_SeleniumWD_Basic/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>HomeWork_16</artifactId>
+    <artifactId>HomeWork_17_SeleniumWD_Basic</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
