--- a/HomeWork_18_PageObject/pom.xml
+++ b/HomeWork_18_PageObject/pom.xml
@@ -3,22 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>HomeWorks</groupId>
+        <artifactId>aqa-pet</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>HomeWorks</groupId>
-    <artifactId>aqa-pet</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>HomeWork_11_Maven</module>
-        <module>HomeWork_16</module>
-        <module>HomeWork_17_SeleniumWD_Basic</module>
-        <module>HomeWork_18_PageObject</module>
-    </modules>
+    <artifactId>HomeWork_18_PageObject</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
 </project>
