--- a/HomeWork_17_SeleniumWD_Basic/pom.xml
+++ b/HomeWork_17_SeleniumWD_Basic/pom.xml
@@ -68,8 +68,8 @@
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>testNGPositive.xml</suiteXmlFile>
-                        <suiteXmlFile>testNGNegative.xml</suiteXmlFile>
+                        <suiteXmlFile>HW17SeleniumPositiveSuite.xml</suiteXmlFile>
+                        <suiteXmlFile>HW17SeleniumNegativeSuite.xml</suiteXmlFile>
                         <!--Я помню, что мы на практике не будем запускать отсюда сразу два сьюта.
                         Один можно закоммитить.-->
                     </suiteXmlFiles>
